[tool.poetry]
name = "api-pwb"
version = "0.1.0"
description = "Trabalhando com API do PowerBI"
authors = ["Edvaldo Gutierres <edvaldo_gutierres@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
msal = "^1.31.1"
pre-commit = "^4.1.0"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
